--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Slipt Screen</title>
   </head>
   <body>
-    <h1>Porject Starter</h1>
+    <div class="container"></div>
 
     <script src="script.js"></script>
   </body>
