--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Slipt Screen</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="split left"></div>
+    </div>
 
     <script src="script.js"></script>
   </body>
